--- a/Pod/Assets/SCPictureEvent.xib
+++ b/Pod/Assets/SCPictureEvent.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SCBoardObjectEventCell">
             <connections>
-                <outlet property="eventContentTimeView" destination="Y3h-JI-reo" id="DB8-vU-one"/>
-                <outlet property="eventContentView" destination="Xo1-QS-u17" id="7WE-a6-0R9"/>
-                <outlet property="readStatus" destination="iBi-ZD-SVy" id="WIN-uy-mCf"/>
+                <outlet property="eventContentTimeView" destination="Y3h-JI-reo" id="Kdb-oe-lVg"/>
+                <outlet property="eventContentView" destination="Xo1-QS-u17" id="U2t-dC-rMI"/>
+                <outlet property="readStatus" destination="iBi-ZD-SVy" id="uwy-JV-cnZ"/>
                 <outlet property="tapGestureView" destination="Xo1-QS-u17" id="zQ7-Be-H2A"/>
-                <outlet property="timeInfo" destination="hB8-tf-N8c" id="iBR-ac-434"/>
+                <outlet property="timeInfo" destination="hB8-tf-N8c" id="ZoK-Nl-LjZ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -119,7 +119,7 @@
         </view>
     </objects>
     <resources>
-        <image name="img_chat_placeholder_photo" width="16" height="16"/>
+        <image name="img_chat_placeholder_photo" width="63" height="63"/>
         <image name="img_chat_shadow" width="153" height="38"/>
     </resources>
 </document>
